--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,7 +7,7 @@ Flask-WTF==1.1.1
 python-dotenv==1.0.0
 requests==2.31.0
 beautifulsoup4==4.12.2
-lxml==4.9.3
+lxml>=4.9.3
 bcrypt==4.0.1
 Werkzeug==2.3.7
 authlib==1.2.1
