--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
     "@headlessui/react": "^2.2.7",
     "@hookform/resolvers": "^5.2.1",
     "@types/js-cookie": "^3.0.6",
+    "@types/react-syntax-highlighter": "^15.5.13",
+    "@uiw/react-md-editor": "^4.0.8",
     "axios": "^1.11.0",
     "date-fns": "^4.1.0",
     "js-cookie": "^3.0.5",
@@ -20,6 +22,12 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
+    "react-markdown": "^10.1.0",
+    "react-syntax-highlighter": "^15.6.6",
+    "rehype-sanitize": "^6.0.0",
+    "remark": "^15.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-html": "^16.0.1",
     "zod": "^4.0.17"
   },
   "devDependencies": {
