--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,14 +1,1 @@
-Flask==2.3.3
-Flask-SQLAlchemy==3.0.5
-Flask-CORS==4.0.0
-Flask-JWT-Extended==4.5.3
-Flask-Login==0.6.3
-Flask-WTF==1.1.1
-python-dotenv==1.0.0
-requests==2.31.0
-beautifulsoup4==4.12.2
-lxml>=4.9.3
-bcrypt==4.0.1
-Werkzeug==2.3.7
-authlib==1.2.1
-python-jose[cryptography]==3.3.0
+waitress
