--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,10 @@
     "@hookform/resolvers": "^5.2.1",
     "@types/js-cookie": "^3.0.6",
     "@types/react-syntax-highlighter": "^15.5.13",
-    "@uiw/react-markdown-preview": "^5.1.5",
-    "@uiw/react-md-editor": "^4.0.8",
+  "@uiw/react-markdown-preview": "^5.1.5",
+  "@uiw/react-md-editor": "^4.0.8",
+  "@logto/next": "^2.2.3",
+  "@logto/node": "^2.2.3",
     "axios": "^1.11.0",
     "date-fns": "^4.1.0",
     "js-cookie": "^3.0.5",
