--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,1 +1,35 @@
-waitress
+Authlib==1.6.4
+bcrypt==5.0.0
+beautifulsoup4==4.13.5
+blinker==1.9.0
+certifi==2025.8.3
+cffi==2.0.0
+charset-normalizer==3.4.3
+click==8.3.0
+cryptography==46.0.1
+ecdsa==0.19.1
+Flask==3.1.2
+Flask-Cors==6.0.1
+Flask-JWT-Extended==4.7.1
+Flask-Login==0.6.3
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.2
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+pyasn1==0.6.1
+pycparser==2.23
+PyJWT==2.10.1
+python-dotenv==1.1.1
+python-jose[cryptography]==3.5.0
+requests==2.32.5
+rsa==4.9.1
+six==1.17.0
+soupsieve==2.8
+SQLAlchemy==2.0.43
+typing_extensions==4.15.0
+urllib3==2.5.0
+waitress==3.0.2
+Werkzeug==3.1.3
+WTForms==3.2.1
