--- a/backend/.env.example
+++ b/backend/.env.example
@@ -9,3 +9,6 @@ GOOGLE_CLIENT_ID=your-google-client-id
 GOOGLE_CLIENT_SECRET=your-google-client-secret
 GITHUB_CLIENT_ID=your-github-client-id
 GITHUB_CLIENT_SECRET=your-github-client-secret
+
+# Logto shared-secret used by /api/v1/auth/logto/exchange
+LOGTO_EXCHANGE_SECRET=change-me-and-keep-private
